Atila presentation added

--- a/BayesianColibri/baco-slides.tex
+++ b/BayesianColibri/baco-slides.tex
@@ -1,2 +1,2 @@
-\documentclass[notes={hide notes}, department=clst, official=true]{beamerruhuisstijl}
+\documentclass[notes={hide notes}, department=cls, grouplogo=lama, official=true]{beamerruhuisstijl}
 \input{baco.tex}
