--- a/ruhuisstijl/distributed/example.tex
+++ b/ruhuisstijl/distributed/example.tex
@@ -18,14 +18,17 @@
 %% 10 October 2014: CLS template added
 %% 20 October 2014: HLCS template added
 %% 28 October 2014: Kaski, PTRS, IMR, SteR templates added
+%% 11 November 2014: Group logo added for Language Machines (lama)
+%% 25 November 2014: DS, iCIS, IS, MBSD templates added
 
-\documentclass[department=kaski, notes={hide notes}, slidesperpage=4, handout, official=true]{beamerruhuisstijl}
+\documentclass[department=ds, notes={hide notes}, slidesperpage=4, handout, official=true]{beamerruhuisstijl}
 %% The class takes the following optional arguments:
-%% notes: {show notes}, {hide notes}, {show only notes}
-%% official: true, false
-%% department: clst, cls, hlcs, kaski, ptrs, imr, ster (default = RU)
+%% notes: {show notes}, {hide notes}, {show only notes} (default = hide notes)
+%% official: true, false (default = false)
+%% department: clst, cls, hlcs, kaski, ptrs, imr, ster, ds, is, mbsd, icis (default = RU)
+%% grouplogo: lama (default = no group logo)
 %% handout
-%% slidesperpage: 1, 2, 3, 4, 6 
+%% slidesperpage: 1, 2, 3, 4, 6 (default = 1)
 
 \title{Wie weet er wat er gebeurt als je een vele te lange titel neemt?}
 \subtitle{Gebruiksvoorwaarden \& sjablonen (juli 2014)}
@@ -367,7 +370,7 @@ aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapi
     \titlepage
 \end{frame}
 \begin{frame}{Voorbeeld: none}
-	Radboud University
+    Radboud University
 \end{frame}
 
 \renewcommand{\dept}{cls}
@@ -376,7 +379,7 @@ aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapi
     \titlepage
 \end{frame}
 \begin{frame}{Voorbeeld: CLS}
-	Centre for Language Studies
+    Centre for Language Studies
 \end{frame}
 
 \renewcommand{\dept}{hlcs}
@@ -384,7 +387,7 @@ aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapi
     \titlepage
 \end{frame}
 \begin{frame}{Voorbeeld: HLCS}
-	Institute for Historical, Literary and Cultural Studies
+    Institute for Historical, Literary and Cultural Studies
 \end{frame}
 
 \renewcommand{\dept}{clst}
@@ -392,7 +395,7 @@ aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapi
     \titlepage
 \end{frame}
 \begin{frame}{Voorbeeld: CLST}
-	Centre for Language and Speech Technology
+    Centre for Language and Speech Technology
 \end{frame}
 
 \renewcommand{\dept}{kaski}
@@ -400,7 +403,7 @@ aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapi
     \titlepage
 \end{frame}
 \begin{frame}{Voorbeeld: Kaski}
-	Center for Applied Research on Religion
+    Center for Applied Research on Religion
 \end{frame}
 
 \renewcommand{\dept}{ster}
@@ -408,7 +411,7 @@ aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapi
     \titlepage
 \end{frame}
 \begin{frame}{Voorbeeld: SteR}
-	Research Centre for State and Law
+    Research Centre for State and Law
 \end{frame}
 
 \renewcommand{\dept}{imr}
@@ -416,7 +419,7 @@ aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapi
     \titlepage
 \end{frame}
 \begin{frame}{Voorbeeld: IMR}
-	Institute for Management Research
+    Institute for Management Research
 \end{frame}
 
 \renewcommand{\dept}{ptrs}
@@ -424,7 +427,39 @@ aut et es dellab ipsum, ium alis aboriandunt ea sinverios sequo ea consedi psapi
     \titlepage
 \end{frame}
 \begin{frame}{Voorbeeld: PTRS}
-	Research Institute for Philosophy, Theology and Religious Studies
+    Research Institute for Philosophy, Theology and Religious Studies
+\end{frame}
+
+\renewcommand{\dept}{icis}
+\begin{frame}
+    \titlepage
+\end{frame}
+\begin{frame}{Voorbeeld: iCIS}
+    Institute for Computing and Information Sciences
+\end{frame}
+
+\renewcommand{\dept}{mbsd}
+\begin{frame}
+    \titlepage
+\end{frame}
+\begin{frame}{Voorbeeld: MBSD}
+    iCIS: Model Based System Development
+\end{frame}
+
+\renewcommand{\dept}{ds}
+\begin{frame}
+    \titlepage
+\end{frame}
+\begin{frame}{Voorbeeld: DS}
+    iCIS: Digital Security
+\end{frame}
+
+\renewcommand{\dept}{is}
+\begin{frame}
+    \titlepage
+\end{frame}
+\begin{frame}{Voorbeeld: IS}
+    iCIS: Intelligent Systems
 \end{frame}
 
 \end{document}
